--- a/shopping-cart/Jenkinsfile
+++ b/shopping-cart/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent { node { label 'maven' } }
 
-    environment { APP_NAMESPACE = 'RHT_OCP4_DEV_USER-security-scans' }
+    environment { APP_NAMESPACE = 'qznnjzs-security-scans' }
 
     stages {
         stage('Test') {
