Added start notification

--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
+                sendNotification('started', 'team@example.com')
                 git branch: 'notifications',
                     url: 'https://github.com/yshimi1005/DO400-apps/'
             }    
@@ -18,4 +19,9 @@ pipeline {
             }
         }
     }
+}
+void sendNotification(String action, String email) {
+    mail to: "${email}",
+    subject: "Pipeline ${action}: ${currentBuild.fullDisplayName}",
+    body: "The following pipeline ${action}: ${env.BUILD_URL}"
 }
