Added style stage

--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -18,8 +18,18 @@ pipeline {
                 }
             }
         }
+
+    stage('Check Style') {
+        steps {
+            dir('simple-calculator') {
+                sh './mvnw clean checkstyle:check'
+            }
+        }
     }
     post {
+        failure {
+            sendFailureAlert('team@example.com')
+        }
         always {
             sendNotification('finished', 'team@example.com')
         }
@@ -29,4 +39,10 @@ void sendNotification(String action, String email) {
     mail to: "${email}",
     subject: "Pipeline ${action}: ${currentBuild.fullDisplayName}",
     body: "The following pipeline ${action}: ${env.BUILD_URL}"
+}
+
+void sendFailureAlert(String email) {
+    mail to: "${email}",
+        subject: "Pipeline failed: ${currentBuild.fullDisplayName}",
+        body: "The following pipeline failed: ${env.BUILD_URL}"
 }
