--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -14,7 +14,14 @@ pipeline {
         stage('Test') {
             steps {
                 dir('simple-calculator') {
-                    sh './mvnw clean test'
+                    script {
+                        try {
+                            sh './mvnw clean checkstyle:check'
+                        } catch (Exception e) {
+                            sendWarningAlert("${STAGE_NAME}", 'devs@example.com')
+                            unstable("${STAGE_NAME} stage failed!")
+                        }
+                    }
                 }
             }
         }
@@ -46,4 +53,10 @@ void sendFailureAlert(String email) {
     mail to: "${email}",
         subject: "Pipeline failed: ${currentBuild.fullDisplayName}",
         body: "The following pipeline failed: ${env.BUILD_URL}"
+}
+
+void sendWarningAlert(String stage, String email) {
+    mail to: "${email}",
+        subject: "${stage} stage failed: ${currentBuild.fullDisplayName}",
+        body: "The ${stage} stage failed: ${env.BUILD_URL}"
 }
